Rotating cube
Bodged less-than depth-test
Finally sorted camera and projection matrices
Tidied up DefaultImage a bit